Mise à jour des liens

--- a/index.html
+++ b/index.html
@@ -85,44 +85,54 @@
 	</style>
 </head>
 <body>
+
 	<h1>Cours de première NSI</h1>
 
 	<main>
 		<h2 class=attente>Séquence 1 - Comment l’information est stockée ?</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2 class=attente>Séquence 2 - Comment fonctionne un logiciel ?</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2 class=attente>Séquence 3 - Comment utiliser les données ?</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2 class=attente>Séquence 4 - Comment fonctionne un ordinateur et internet ?</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2 class=attente>Séquence 5 - Comment résoudre des problèmes avec un ordinateur ?</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2>Séquence 6 - Comment fonctionne un site internet ?</h2>
 		<div>
-			<a class=cours href="">Document de cours</a>
-			<a href="">TP 1</a>
-			<a href="">TP 2</a>
-			<a href="">TP 3</a>
-			<a href="">TP 4</a>
+			<a class=cours target=_blank href="https://docs.google.com/document/d/1VS8a1NDCIs-cyf4inh5Y1VN_XdZMTxzuLkTnv0cS6BI/edit?usp=sharing">Cours - HTML</a>
+			<a class=cours target=_blank href="https://docs.google.com/document/d/1-ROdYTsKDMU-PPGOIoxdoyGAyZMhxhJaB5VRK5t_EHQ/edit?usp=sharing">Cours - CSS</a>
+			<a target=_blank href="https://docs.google.com/document/d/1bv1ckPiNrw5CCVBLrbRdpR70GlEwfuUpKDMLrfCIp9c/edit?usp=sharing">TP 1</a>
+			<a target=_blank href="https://docs.google.com/document/d/1xsZr62WLjtVwI7uhIQNSiqpuldoDSm2d4KIxFXmelcg/edit?usp=sharing">TP 2</a>
+			<a target=_blank href="https://docs.google.com/document/d/1nXKGE-hX3ycnZA4KDn8sxRiftbtawx7DBeVQ2BrrdpY/edit?usp=sharing">TP 3</a>
+			<a target=_blank href="https://docs.google.com/document/d/1RU63pCOUg3ky40B7Kg2GbMwcuULVCGeJ_dEdYJpk5g4/edit?usp=sharing">TP 4</a>
 		</div>
 
 		<h2 >Séquence 7 - Comment utiliser une IHM pour collecter des données ?</h2>
-		<div>Contenu à venir.</div>
+		<div>
+			<a class=cours target=_blank href="https://docs.google.com/document/d/1sVvsggO7qeuCZ5eNtDpw8bvZfQCkPhaUh84TPZ1OiyE/edit?usp=sharing">Cours - Javascript</a>
+			<a target=_blank href="https://docs.google.com/document/d/1RpT6S3f0PKAf2al_IcIWMybcBA_Ex6AQjB2eG1KiP_s/edit?usp=sharing">TP 1</a>
+			<a target=_blank href="https://docs.google.com/document/d/1QH9W3vJzDEpt7eKc1lem8yLWUoNfSv5xQ5Na7RL0B2M/edit?usp=sharing">TP 2</a>
+			<a target=_blank href="https://docs.google.com/document/d/1Tv1rH5txzWPSndSCSYIcBor24NgnqzIlxcAeH8_WJ6A/edit?usp=sharing">TP 3</a>
+			<a target=_blank href="https://docs.google.com/document/d/1CvmkkKhVeuY1mdqHXHtokwRCo9FHP9aE6gw9woxgrFo/edit?usp=sharing">TP 4</a>
+			<a target=_blank href="https://docs.google.com/document/d/13TzG_94sihsIoKjVFJgNfWWEjsusKbLT1Ldq_hg-tJ0/edit?usp=sharing">TP 5</a>
+			<a target=_blank href="https://docs.google.com/document/d/108UpMnSZd0EunhQA2kmjuqimwgBDmuRBfAhTDaIAjHg/edit?usp=sharing">TP 6</a>
+		</div>
 
 		<h2 class=attente>Séquence 8 - Réaliser ses propres choix pour résoudre un problème.</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2 class=attente>Séquence 9 - Comment résoudre des problèmes avec des machines ?</h2>
-		<div>Contenu à venir.</div>
+		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 	</main>
-	
+
 	<script>
 		document.querySelectorAll("h2").forEach(function(e){
 			e.addEventListener("click", ouvrir)
