MAJ Séquence 6 et 7

--- a/index.html
+++ b/index.html
@@ -114,9 +114,8 @@
 			<div>
 				<a target=_blank href="https://docs.google.com/document/d/1bv1ckPiNrw5CCVBLrbRdpR70GlEwfuUpKDMLrfCIp9c/edit?usp=sharing">TP 1 - Premier site</a>
 				<a target=_blank href="https://docs.google.com/document/d/1xsZr62WLjtVwI7uhIQNSiqpuldoDSm2d4KIxFXmelcg/edit?usp=sharing">TP 2 - Mise en page et mise en ligne</a>
-				<a target=_blank href="https://docs.google.com/document/d/1nXKGE-hX3ycnZA4KDn8sxRiftbtawx7DBeVQ2BrrdpY/edit?usp=sharing">TP 3 - En pratique</a>
-				<a target=_blank href="https://docs.google.com/document/d/1RU63pCOUg3ky40B7Kg2GbMwcuULVCGeJ_dEdYJpk5g4/edit?usp=sharing">TP 4 - Entraînement</a>
-				<a target=_blank href="https://docs.google.com/document/d/1RU63pCOUg3ky40B7Kg2GbMwcuULVCGeJ_dEdYJpk5g4/edit?usp=sharing">TP 4 bis - Evaluation</a>
+				<a target=_blank href="https://docs.google.com/document/d/1nXKGE-hX3ycnZA4KDn8sxRiftbtawx7DBeVQ2BrrdpY/edit?usp=sharing">TP 3 et 4 - En pratique</a>
+				<a target=_blank href="https://docs.google.com/document/d/1RU63pCOUg3ky40B7Kg2GbMwcuULVCGeJ_dEdYJpk5g4/edit?usp=sharing">Evaluation (non affichée en vrai)</a>
 			</div>
 			
 		</div>
