MAJ Liens Séquence 7

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
 			background:#ef5350;
 			color: #FFF;
 		}
+		.eval>a{
+			background: #90c;
+			color: #FFF;
+		}
 	</style>
 </head>
 <body>
@@ -116,7 +120,7 @@
 				<a target=_blank href="https://docs.google.com/document/d/1xsZr62WLjtVwI7uhIQNSiqpuldoDSm2d4KIxFXmelcg/edit?usp=sharing">TP 2 - Mise en page et mise en ligne</a>
 				<a target=_blank href="https://docs.google.com/document/d/1nXKGE-hX3ycnZA4KDn8sxRiftbtawx7DBeVQ2BrrdpY/edit?usp=sharing">TP 3 et 4 - En pratique</a>
 			</div>
-			<div>
+			<div class=eval>
 				<a target=_blank href="https://docs.google.com/document/d/1RU63pCOUg3ky40B7Kg2GbMwcuULVCGeJ_dEdYJpk5g4/edit?usp=sharing">Evaluation (non affichée en vrai)</a>
 				<a target=_blank href="https://docs.google.com/spreadsheets/d/1jSnID5zTd1zeReYZjCkBDXYwMLHQ2Q_wdaXtI2ogmIY/edit?usp=sharing">Barème évaluation (non affichée en vrai)</a>
 			</div>
