--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 			</div>
 			<div class=eval>
 				<a target=_blank href="https://docs.google.com/document/d/1RU63pCOUg3ky40B7Kg2GbMwcuULVCGeJ_dEdYJpk5g4/edit?usp=sharing">Evaluation (non affichée en vrai)</a>
-				<a target=_blank href="https://docs.google.com/spreadsheets/d/1jSnID5zTd1zeReYZjCkBDXYwMLHQ2Q_wdaXtI2ogmIY/edit?usp=sharing">Barème évaluation (non affichée en vrai)</a>
+				<a target=_blank href="https://docs.google.com/spreadsheets/d/1jSnID5zTd1zeReYZjCkBDXYwMLHQ2Q_wdaXtI2ogmIY/edit?usp=sharing">Barème évaluation (non affiché en vrai)</a>
 			</div>
 		</div>
 
@@ -142,7 +142,7 @@
 			</div>
 			<div class=eval>
 				<a target=_blank href="https://docs.google.com/document/d/1Va9wt9XqhvzhSpQ83phBuM7ojfNh_d0-PlTjorTbNWg/edit?usp=sharing">Evaluation (non affichée en vrai)</a>
-				<a target=_blank href="https://docs.google.com/spreadsheets/d/1OD-nmp6kGu2HXHDS7fqADJ90DpQpIfEarh9GpE92XI4/edit?usp=sharing">Barème évaluation (non affichée en vrai)</a>
+				<a target=_blank href="https://docs.google.com/spreadsheets/d/1OD-nmp6kGu2HXHDS7fqADJ90DpQpIfEarh9GpE92XI4/edit?usp=sharing">Barème évaluation (non affiché en vrai)</a>
 			</div>
 			
 		</div>
