Correction bug sticky

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			color: #FFF;
 			margin: 0;
 			padding: 20px 20px 20px 40px;
-			display: sticky;
+			position: sticky;
 			top:0;
 		}
 		main{
@@ -31,6 +31,7 @@
 			border-radius: 20px;
 			cursor: pointer;
 			transition: 0.4s;
+			scroll-margin-top: 90px;
 		}
 		.attente{
 			color: #AAA;
