--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<a target=_blank href="https://docs.google.com/document/d/13TzG_94sihsIoKjVFJgNfWWEjsusKbLT1Ldq_hg-tJ0/edit?usp=sharing">TP 5 et 6 - En pratique</a>
 			</div>
 			<div class=eval>
-				<a target=_blank href="https://docs.google.com/spreadsheets/d/1OD-nmp6kGu2HXHDS7fqADJ90DpQpIfEarh9GpE92XI4/edit?usp=sharing">Evaluation formative : critères (non affiché en vrai)</a>
+				<a target=_blank href="https://docs.google.com/spreadsheets/d/1OD-nmp6kGu2HXHDS7fqADJ90DpQpIfEarh9GpE92XI4/edit?usp=sharing">Evaluations : critères (non affiché en vrai)</a>
 			</div>
 			
 		</div>
