--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<h1>Cours de première NSI</h1>
 
 	<main>
-		<h2 class=attente>Séquence 1 - Comment l’information est stockée ?</h2>
+		<h2 class=attente>Séquence 1 - Comment l’information est-elle stockée ?</h2>
 		<div>Contenu à venir - voir séquences 6 et 7.</div>
 
 		<h2 class=attente>Séquence 2 - Comment fonctionne un logiciel ?</h2>
